syntax = "proto3";
package pb;

option go_package = "github.com/ekspand/trusty/api/v1/pb";

import "pkix.proto";
import "ca.proto";
import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";
// for grpc-gateway
import "google/api/annotations.proto";

service RAService {
    // GetRoots returns the root certificates
    rpc GetRoots(google.protobuf.Empty) returns (RootsResponse) {
        option (google.api.http) = {
            get: "/v1/ra/roots"
        };
    }

    // RegisterRoot registers root CA
    rpc RegisterRoot(RegisterRootRequest) returns (RootsResponse) {
    }

    // RegisterCertificate registers certificate
    rpc RegisterCertificate(RegisterCertificateRequest) returns (CertificateResponse) {
    }

    // GetCertificate returns the certificate
    rpc GetCertificate(GetCertificateRequest) returns (CertificateResponse) {
    }    
}

// RootsResponse returns Root Certificates
message RootsResponse {
    repeated RootCertificate roots = 1;
}

// CertificatesResponse returns Certificates
message CertificatesResponse {
    repeated Certificate certificates = 1;
}


message RegisterRootRequest {
    RootCertificate root = 1;
}

message RegisterCertificateRequest {
    Certificate certificate = 1;
}
